# slam_basic_function

./: README.md  emicp.py  write2txt.m
matlab_tool/: do_trimming.m  fastPCA.m  get_points_from_depth.m  huber_loss.m  icp_simple_v1.m  read_kitti_trajectories  read_ply.m  robust_EM_ICP.m  teaser_solve_mex.mexa64  video_main.m
matlab_tool/TSDF_Fusion/: TSDF_from_depth_and_xyz.m  demo_kinfu.m
obj2mat/: README  find.py  find_and_split.py  frame2voxel.m  loadawobj.m  loadawobj_with_disp.m  obj2mat_multithread.m  obj2voxel.m  off2voxel.m  polygon2voxel.m  polygon2voxel_double.c  save_mat.m  write2txt.m
obj2pcd/: modelloader.h  obj2pcd.cpp
pcl_object_recognition/: CMakeLists.txt  correspondence_grouping.cpp  milk1.pcd
python_tool/: SVD_for_RT.py  eulerAnglesToRotationMatrix.py  get_points_from_depth.py  main_scene_rederning.py  meshwrite.py  ptc2mesh.py  rigid_transform.py  rotationMatrixToEulerAngles.py  rotation_translation_error.py
